
[project]
name = "python_decorators_utils"
version = "0.1.2"
description = "A collection of useful Python decorators including timing and caching"
authors = [{"name" = "Udit Anand", "email" = "getuditanand@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["Decorators*"]
